packages/parser/test/parser/E0111-binary-expression.txt
a := b +
===== err =====
anonymous:1:9: ParseError: E0111 - Expected right-hand expression after `+` operator
1 | a := b +
  |         ^
